[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/objects/pickable_items/equipment/consumable/medical/medical.gd" type="Script" id=1]
[ext_resource path="res://scenes/objects/pickable_items/equipment/consumable/_consumable_item.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/sounds/breathing/sigh/568927__bogenseeberg__sigh_collection-18.ogg" type="AudioStream" id=3]

[node name="MedicalItem" instance=ExtResource( 2 )]
script = ExtResource( 1 )
item_size = 0
item_name = "Medical Equipment"
heal_amount = 10
speed_boost = 0
time_to_use = 5
max_charges_held = 1
max_charges_usable_at_once = 1

[node name="UseTime" type="Timer" parent="." index="3"]
wait_time = 5.0

[node name="Sounds" type="Node3D" parent="." index="4"]

[node name="Equip" type="AudioStreamPlayer3D" parent="Sounds" index="0"]

[node name="Prep" type="AudioStreamPlayer3D" parent="Sounds" index="1"]

[node name="Use" type="AudioStreamPlayer3D" parent="Sounds" index="2"]

[node name="UseComplete" type="AudioStreamPlayer3D" parent="Sounds" index="3"]
stream = ExtResource( 3 )

[connection signal="timeout" from="UseTime" to="." method="_on_UseTime_timeout"]
